# mori

./: README.md
docs/: DISPATCH-COMBINE-PYTHON-INTERFACE.md  HDP_MEM_FLUSH_INVESTIGATION.md
examples/: CMakeLists.txt
examples/gpu_interchange/: MORI_CODE_OVERVIEW.md  README.md  simple_gpu_interchange.cpp
include/mori/ops/dispatch_combine/: dispatch_combine.hpp
p2p_allreduce/: ATTRIBUTION.md  BUILD.md  CMakeLists.txt  DESIGN.md  QUICKSTART.md  README.md
p2p_allreduce/examples/: benchmark_allreduce.cpp  test_allreduce.cpp
p2p_allreduce/include/: kernels.hpp  optimizations.hpp  p2p_allreduce.hpp
p2p_allreduce/src/: allreduce.cpp  bootstrap.cpp  symmetric_memory.cpp
src/ops/dispatch_combine/: dispatch_combine.cpp  intranode_v1.cpp  intranode_v1.hpp
src/pybind/: mori.cpp
standalone_dispatch_combine/: CMakeLists.txt  COMPLETION_CHECKLIST.md  DESIGN.md  IMPLEMENTATION_COMPLETE.md  INDEX.md  LICENSE  QUICKSTART.md  README.md  SUMMARY.md  build.sh
standalone_dispatch_combine/examples/: benchmark.cpp  example.cpp
standalone_dispatch_combine/include/: dispatch_combine.hpp
standalone_dispatch_combine/src/: dispatch_combine.cpp  kernels.hip.cpp  kernels_optimized.hip.cpp
